--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Presenting research-backed flaws in Computer Science education, and curating guides to counter it."
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>The real reason you wanna drop out of Computer Science</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
